--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,6 +11,8 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
+    "react-scrollama": "^2.3.2",
+    "react-spring": "^9.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
